# GPT-Agents

./: .gitignore  pyproject.toml
chapter_03/: open_api.yaml
chapter_04/: OAI_CONFIG_LIST_OLLAMA  autogen_coding_critic.py  autogen_coding_group.py  autogen_start.py  crewai_agentops.py
chapter_05/: SK_connecting.py  first_function.py  parallel_functions.py
chapter_2/: connecting.py  prompt_engineering.py
