[project]
name = "llm-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.0",
    "watchdog>=4.0.1"    
]