[project]
name = "llm-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.0",
    "watchdog>=4.0.1",
    "autogenstudio==0.4.1",
    "crewai[tools]<=1.11.0",
    "langchain>=0.3.25",
    "pyautogen>=0.9",
    "autogen-ext[ollama]>=0.4.9.3",
    "langchain-ollama>=1.1.0",
    "agentops>=0.4.21",
]
